@@ -2,14 +2,19 @@ package com.interview.preparation.practise;
 
 public class PractiseClass {
   public static void main(String[] args) {
-    System.out.println(Thread.currentThread().getName());
-    for (int i = 0; i < 10; i++) {
-      new Thread("" + i) {
-        public void run() {
-          System.out.println("Thread: " + getName() + " running");
-        }
-      }.start();
+    TestRunnable testRunnable = new TestRunnable();
+
+    Thread th1 = Thread.ofVirtual().name("Thread1").start(testRunnable);
+
+    Thread th2 = Thread.ofVirtual().name("Thread2").start(testRunnable);
+
+    try {
+      th1.join();
+      th2.join();
+    } catch (InterruptedException e) {
+      Thread.currentThread().interrupt();
     }
+
   }
 }
 
